[project]
name = "practice-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lokin prasad", email = "lokin.217@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
practice-1 = "practice_1:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
